terraform/main.tf
provider "aws" {
  region = var.region
}

resource "aws_security_group" "web_sg" {
  name        = "flask-express-sg"
  description = "Allow 22, 3000, 8000"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# -----------------------
# Two EC2 Instances
# -----------------------
resource "aws_instance" "app_instance" {
  count                  = 2
  ami                    = var.app_ami
  instance_type          = var.instance_type
  key_name               = var.key_name
  vpc_security_group_ids = [aws_security_group.web_sg.id]
  user_data              = file("${path.module}/user_data.sh")

  tags = {
    Name = "Flask-Express-Server-${count.index + 1}"
  }
}
